feat(workers): rework workflow to include step numbers